--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,7 @@
 
 <div class="music-player">
     <audio controls loop>
-        <source src="audio/lagu_gallery.mp3" type="audio/mpeg">
+        <source src="Audio/lagu_gallery.mp3" type="audio/mpeg">
     </audio>
 </div>
 
@@ -142,4 +142,5 @@
 </footer>
 
 </body>
+
 </html>
